# Website-chat-agent

./: .dockerignore  .gitignore  ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BRANDING_BRIEF.md  DATA_STATUS.md  Dockerfile  PartSelect_AI_Agent_Presentation.pptx  README.md  TASK.md  hello.py  improvements.md  pyproject.toml  scrape_blogs.py  scrape_partselect.py  scrape_playwright.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: classifier.py  loop.py  system_prompt.py
backend/app/api/: chat.py  models.py
backend/app/data/: chroma_store.py  embeddings.py  loader.py  search.py
backend/app/session/: memory.py
backend/app/tools/: check_compatibility.py  diagnose_symptom.py  installation_guide.py  product_details.py  registry.py  search_parts.py
backend/chroma_db/4ae48e3f-6dde-4524-9f46-e4447e24d253/: index_metadata.pickle
backend/chroma_db/51a087d2-bfc2-41ca-bef2-1308ba0b0363/: index_metadata.pickle
backend/instalily_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: embed_knowledge.py  embed_parts.py  test_backend.py
data/: blogs.json  enhance_checkpoint.json  explore_results.json  models_index.json  parts.csv  parts.json  pw_checkpoint_1.json  pw_checkpoint_2.json  pw_checkpoint_3.json  pw_checkpoint_4.json  pw_checkpoint_5.json  pw_checkpoint_6.json  pw_repairs_checkpoint.json  recon_category.html  recon_category.md  recon_product.html  recon_product.md  recon_product_pw.html  recon_product_pw.md  recon_repair.html  recon_repair.md  recon_repair_pw.md  repairs.json  repairs_all.json  (+5 more)
(+51 files in other folders)
