[project]
name = "instalily-casestudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "firecrawl-py>=4.19.0",
    "html2text>=2025.4.15",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
